objects/Credit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>Subsidery__c</fullName>
        <label>Subsidiary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8450</fullName>
                </value>
                <value>
                    <fullName>8440</fullName>
                </value>
                <value>
                    <fullName>8445</fullName>
                </value>
                <value>
                    <fullName>8105</fullName>
                </value>
                <value>
                    <fullName>8375</fullName>
                </value>
                <value>
                    <fullName>8100</fullName>
                </value>
                <value>
                    <fullName>8110</fullName>
                </value>
                <value>
                    <fullName>8300</fullName>
                </value>
                <value>
                    <fullName>8305</fullName>
                </value>
                <value>
                    <fullName>8310</fullName>
                </value>
                <value>
                    <fullName>8315</fullName>
                </value>
                <value>
                    <fullName>8330</fullName>
                </value>
                <value>
                    <fullName>8325</fullName>
                </value>
                <value>
                    <fullName>8400</fullName>
                </value>
                <value>
                    <fullName>8420</fullName>
                </value>
                <value>
                    <fullName>8365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Dept_Approved_Date__c</fullName>
        <label>Tax Dept. Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Dept_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Dept. Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Impact__c</fullName>
        <label>Total Revenue Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Corporate_Controller_Approved_Date__c</fullName>
        <label>VP, Corporate Controller Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Corporate_Controller_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP, Corporate Controller Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Memo New</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NS_CM_Number__c</columns>
        <columns>Credit_Type__c</columns>
        <columns>Customer_Name_End_User__c</columns>
        <columns>Final_Credit_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>SFDC_Sales_Order1__c</columns>
        <columns>Sold_To_NS_Customer__c</columns>
        <columns>End_Customer_Region__c</columns>
        <columns>Draft_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NS_CM_Number__c</field>
            <operation>startsWith</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_with_Draft_Date</fullName>
        <columns>NAME</columns>
        <columns>Credit_Type__c</columns>
        <columns>Customer_Name_End_User__c</columns>
        <columns>Final_Credit_Amount__c</columns>
        <columns>NS_Sales_Order__c</columns>
        <columns>Status__c</columns>
        <columns>SFDC_Sales_Order1__c</columns>
        <columns>Draft_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Draft Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_FinOps_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>FinOps</label>
        <queue>Credit_Memo_FinOps</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_OM_Director_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>OM Director</label>
        <queue>Credit_Memo_OM_Director</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_Revenue_Director_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Accountant</label>
        <queue>Credit_Memo_Revenue_Director</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_VP_Shared_Services_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>VP Shared Services</label>
        <queue>Credit_Memo_VP_Shared_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_Analyst_Credit_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Analyst Credit</label>
        <queue>Revenue_Analyst_Credit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_CAO_Write_Off_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue CAO Write Off</label>
        <queue>Revenue_CAO_Write_Off</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_Controller_Write_Off_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Controller-Write Off</label>
        <queue>Revenue_Controller_Write_Off</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_Director_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Director</label>
        <queue>Credit_Memo_Revenue_Director1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_Director_Write_Off_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Director-Write Off</label>
        <queue>Revenue_Director_Write_Off</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_VP_Write_Off_Credit_Memo</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue VP-Write Off</label>
        <queue>Revenue_VP_Write_Off</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo New</pluralLabel>
    <recordTypes>
        <fullName>Approval</fullName>
        <active>true</active>
        <label>Approval</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approved_Pending_CreditMemo_Status_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISCHANGED(Status__c) , ISPICKVAL( Status__c , &apos;Approved - Pending CreditMemo&apos;) , NOT(ISPICKVAL(PRIORVALUE( Status__c ),&apos;Approved - Pending Debooking&apos;)))</errorConditionFormula>
        <errorMessage>&apos;Approved - Pending CreditMemo&apos; status can be set only after &quot;Approved - Pending Debooking&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Awaiting_Rebill_Status_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISCHANGED(Status__c) , ISPICKVAL( Status__c , &apos;Awaiting Rebill&apos;) , NOT(ISPICKVAL(PRIORVALUE( Status__c ),&apos;Approved - Pending CreditMemo&apos;)))</errorConditionFormula>
        <errorMessage>&apos;Awaiting Rebill&apos; status can be set only after &quot;Approved - Pending CreditMemo&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Status_Rule</fullName>
        <active>false</active>
        <description>This status can be set only after &quot;Awaiting Rebill&quot;.</description>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISPICKVAL( Status__c , &apos;Completed&apos;) , NOT( ISPICKVAL( PRIORVALUE(Status__c ), 
&apos;Awaiting Rebill&apos;)), NOT( ISPICKVAL( PRIORVALUE(Status__c ), 
&apos;Cancelled&apos;)), NOT( ISPICKVAL( PRIORVALUE(Status__c ), 
&apos;Completed&apos;)))</errorConditionFormula>
        <errorMessage>&apos;Completed&apos; status can be set only after &quot;Awaiting Rebill&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>More_Info_Reason_Required</fullName>
        <active>true</active>
        <description>If Status is More Info Needed then Reason is required</description>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, TEXT(Status__c) = &apos;More Info Needed&apos;,ISBLANK( More_Info_Reason__c ))</errorConditionFormula>
        <errorDisplayField>More_Info_Reason__c</errorDisplayField>
        <errorMessage>More Info Reason is required if Status is More Info Needed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NS_CM_Number_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISCHANGED(Status__c) , ISPICKVAL(Status__c, &apos;Completed&apos;) , ISBLANK( NS_CM_Number__c) )</errorConditionFormula>
        <errorDisplayField>NS_CM_Number__c</errorDisplayField>
        <errorMessage>Please enter NS CM number.  Status cannot be changed to Completed without NS CM Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NS_Debook_Number_Required_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISCHANGED(Status__c) , ISPICKVAL(Status__c, &apos;Approved - Pending CreditMemo&apos;) ,  ISBLANK( NS_Debook_Number__c ) )</errorConditionFormula>
        <errorDisplayField>NS_Debook_Number__c</errorDisplayField>
        <errorMessage>Please enter NS Debooking number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebill_Sales_Order_as_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassValidationRules__c, ISPICKVAL(Credit_Type__c ,&apos;Credit/Rebill&apos;), 
ISPICKVAL(Status__c, &apos;Completed&apos;),OR(ISBLANK(Rebill_Amount_NU__c),ISBLANK(Rebill_Invoice__c),ISBLANK(Rebill_Sales_Order__c)))</errorConditionFormula>
        <errorMessage>Rebill Sales Order &amp; Rebill Invoice# and Rebill Amount is mandatory for the Credit type as Credit/Rebill</errorMessage>
    </validationRules>
</CustomObject>